[SCRUM-165] test: NotificationCommandServiceTest 수정